--- a/user_namespaces.tex
+++ b/user_namespaces.tex
@@ -173,7 +173,7 @@ Canonical, Inc \\ % Your institution for the title page
 \begin{frame}
 \textbf{LSMs}
 \begin{enumerate}
-\item Paper of the (huge) remaining holes
+\item Paper over the (huge) remaining holes
 \item i.e. prevent {\tt /proc/sys/*} writing, etc
 \item "Safe from accidental damage by container root"
 \item People always want unsafe exceptions
