fix title in slides

--- a/user_namespaces.tex
+++ b/user_namespaces.tex
@@ -87,7 +87,7 @@
 %	TITLE PAGE
 %----------------------------------------------------------------------------------------
 
-\title[User Namespaces]{Application Confinement with User namespaces} % The short title appears at the bottom of every slide, the full title is only on the title page
+\title[User Namespaces]{Using Containers Without Risking Your *aas (Canonical) } % The short title appears at the bottom of every slide, the full title is only on the title page
 
 \author{Serge Hallyn, Scott Moser} % Your name
 \institute[Canonical] % Your institution as it will appear on the bottom of every slide, may be shorthand to save space
