add bullet to userns motivation
Signed-off-by: Serge Hallyn <serge.hallyn@ubuntu.com>

--- a/user_namespaces.tex
+++ b/user_namespaces.tex
@@ -197,6 +197,7 @@ Canonical, Inc \\ % Your institution for the title page
 \item Nevertheless
 	\begin{enumerate}
 	\item Root in container is still root on host
+	\item Owns many system files as uid 0
 	\item Any leak = game over
 	\item Answer: "Wait for user namespaces"
 	\end{enumerate}
