expand on first userns slide
Signed-off-by: Serge Hallyn <serge.hallyn@ubuntu.com>

--- a/user_namespaces.tex
+++ b/user_namespaces.tex
@@ -201,6 +201,13 @@ Canonical, Inc \\ % Your institution for the title page
 	\item Any leak = game over
 	\item Answer: "Wait for user namespaces"
 	\end{enumerate}
+\item User Namespace
+	\begin{enumerate}
+	\item First patch in 2007
+	\item Separate accounting only
+	\item No isolation
+	\item Final design upstreamed in December 2012
+	\end{enumerate}
 \end{enumerate}
 \end{frame}
 
